--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -32,8 +32,7 @@
 
         <link rel="stylesheet" href="/css/spacelab.css">
         <link rel="stylesheet" href="/css/bootstrap-responsive.min.css">
-        <link rel="stylesheet" href="/css/main.css">
-        <link rel="stylesheet" href="/css/pygments.css" >
+        <link rel="stylesheet" href="/css/aura.css">
 
         <script src="/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
         <script src="/js/vendor/jquery-1.9.1.min.js"></script>
