--- a/css/aura.css
+++ b/css/aura.css
@@ -34,6 +34,15 @@ pre {
     color: gray;
 }
 
+#packages table {
+    margin-bottom: 12px;
+}
+
+#package table caption {
+    font-size: 120%;
+    font-weight: bold;
+}
+
 #packages th {
     text-align: left;
 }
