--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -6,6 +6,7 @@
 {% include JB/setup %}
     <head>
         <title>Aura for PHP{% if page.title %} : {{ page.title }}{% endif %}</title>
+        <meta name="google-site-verification" content="A2tW7U7GK5kV6r-W5VOMNrgqNlWHY8Xm0P9SvYNrk5I" />
 
         {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
         <meta charset="utf-8">
